--- a/SVM feature selection.ipynb
+++ b/SVM feature selection.ipynb
@@ -138,7 +138,7 @@
     "       'Intercom', 'SportsFacility', 'ATM', 'ClubHouse', 'School',\n",
     "       '24X7Security', 'PowerBackup', 'CarParking', 'StaffQuarter',\n",
     "       'Cafeteria', 'MultipurposeRoom', 'Hospital',\n",
-    "       'Gasconnection', \"Children'splayarea\", 'LiftAvailable', 'VaastuCompliant', 'GolfCourse']].values"
+    "       'Gasconnection', \"Children'splayarea\", 'LiftAvailable', 'VaastuCompliant', 'GolfCourse', 'Wardrobe']].values"
    ]
   },
   {
@@ -297,7 +297,7 @@
     {
      "data": {
       "text/plain": [
-       "0.7785530107689974"
+       "0.7796147429091461"
       ]
      },
      "execution_count": 19,
