--- a/SVM main.ipynb
+++ b/SVM main.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,12 +105,12 @@
     "       'Cafeteria', 'MultipurposeRoom', 'Hospital', 'WashingMachine',\n",
     "       'Gasconnection', 'AC', 'Wifi', \"Children'splayarea\", 'LiftAvailable',\n",
     "       'BED', 'VaastuCompliant', 'Microwave', 'GolfCourse', 'TV',\n",
-    "       'DiningTable', 'Sofa', 'Wardrobe', 'Refrigerator']].values"
+    "       'DiningTable', 'Sofa', 'Wardrobe', 'Refrigerator', 'Resale']].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "32963"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -157,14 +157,14 @@
       "text/plain": [
        "array([[1300,    3, 1136, ...,    0,    0,    0],\n",
        "       [ 939,    2,   68, ...,    0,    0,    0],\n",
-       "       [ 835,    2,  312, ...,    9,    9,    9],\n",
+       "       [ 835,    2,  312, ...,    9,    9,    0],\n",
        "       ...,\n",
-       "       [ 950,    2,  614, ...,    0,    0,    0],\n",
-       "       [ 610,    1, 1568, ...,    9,    9,    9],\n",
-       "       [1300,    3,  786, ...,    9,    9,    9]], dtype=int64)"
+       "       [ 950,    2,  614, ...,    0,    0,    1],\n",
+       "       [ 610,    1, 1568, ...,    9,    9,    1],\n",
+       "       [1300,    3,  786, ...,    9,    9,    0]], dtype=int64)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "32963"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "array([3, 1, 0, ..., 5, 5, 1])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "SVC(C=50, gamma='auto')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,16 +293,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7903837403306537"
+       "0.7917488245108448"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
